syntax = "proto3";

package kratos.api;

import "google/protobuf/duration.proto";

option go_package = "mgr/internal/conf;conf";

message Bootstrap {
  Service service = 1;
  Trace trace = 2;
  Server server = 3;
  Data data = 4;
  Auth auth = 5;
}

message Service {
  string name = 1;
  string version = 2;
  message Msgpushermanager {
    string endpoint = 1;
    google.protobuf.Duration timeout = 2;
  }
  Msgpushermanager msgpushermanager = 3;
}
message Trace {
  string endpoint = 1;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    google.protobuf.Duration read_timeout = 4;
    google.protobuf.Duration write_timeout = 5;
  }
  Database database = 1;
  Redis redis = 2;
}

message Registry {
  message Etcd {
    string address = 1;
  }
  Etcd etcd = 1;
}

message Auth {
  string service_key = 1;
  string api_key = 2;
  int64 api_key_expire = 3;
}

